package pt.isel.poo.covid.model;

public interface ModelListener {
    void update(Level level);
}
