package pt.isel.poo.covid.model;

/**
 * Auxiliary class for model package.
 */
class Position {
    int line, column;

    public Position(int line, int column){
        this.line = line;
        this.column = column;
    }
}
